# qr-image

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  index-108d2e9b9762b444.js  index-108d2e9b9762b444_bg.wasm  index-21ef14ba92fe7cf9.js  index-21ef14ba92fe7cf9_bg.wasm  index-c4298cc101740678.js  index-c4298cc101740678_bg.wasm  index.html  main-5ee8bdd74b741526.css  main-f3e12650bfb47b15.css  package.json
.github/workflows/: ghpages.yml  rust.yml
projects/qr-image-cli/: Cargo.toml
projects/qr-image-cli/src/: lib.rs  main.rs
projects/qr-image-cli/src/renderer/: mod.rs
projects/qr-image-cli/tests/: main.rs
projects/qr-image-core/: Cargo.toml
projects/qr-image-core/src/: lib.rs
projects/qr-image-core/src/drawer/: mod.rs
projects/qr-image-core/src/renderer/: mod.rs
projects/qr-image-core/src/utils/: mod.rs
projects/qr-image-core/tests/: main.rs
projects/qr-image-rs/: Cargo.toml
projects/qr-image-rs/src/: lib.rs
projects/qr-image-rs/src/renderer/: mod.rs  refine.rs  render.rs
projects/qr-image-rs/tests/: main.rs
projects/qr-image-web/: Cargo.toml  Readme.md  Trunk.toml  index.html  package.json
projects/qr-image-web/assets/: main.scss
projects/qr-image-web/src/: form.rs  lib.rs  main.rs
projects/qr-image-wolfram/: Readme.md
