[package]
name = "qr-image"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/qr-art"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
qr-image-core = { version = "0.2", path = "../qr-image-core" }

[dev-dependencies]

[features]
default = []
