[package]
name = "qr-image"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/qr-image"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
qr-image-core = { version = "0.2", path = "../qr-image-core" }
clap = "4.2"

[dev-dependencies]

[features]
default = []
