[package]
name = "qr-image-core"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/qr-image"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.23"
pix = "0.13"
# qrcode-generator = "4.0"
qrcode = "0.12"

[dev-dependencies]

[features]
default = []
