[package]
name = "qr-image-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/qr-art"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
qr-image-core = {version = "0.1", path = "../qr-image-core"}
