[package]
name = "qr-image-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/qr-art"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
qr-image-core = {version = "0.2", path = "../qr-image-core"}
colors-transform = "0.2"
image = "0.23"
base64 = "0.13"
anyhow = "1.0"